[project]
name = "machine-learning"
version = "0.1.0"
description = "Recursos para clases de Machine Learning"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "seaborn>=0.13.2",
    "sweetviz>=2.3.1",
    "setuptools<82.0.0"
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
